fix header columns and background overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@ header  {
         a {
             text-decoration: none;
             color: $gray;
-            transition: .2s ease color;
+            transition: .3s ease all;
             &.active {
                 color: $black;
                 font-weight: 500;
@@ -25,15 +25,14 @@ header  {
 header {
     grid-area: header;                 
     width: 100%;
-    display: flex;
     position: relative;
     &:before {
         background: $background-light;
         content: '';
-        position: fixed;
+        position: absolute;
         width: 300%;
         left: -100%;
-        height: 5rem;
+        height: 100%;
         z-index: -1;
     }
 }
