--- a/src/assets/scss/cubed-css/_grid.scss
+++ b/src/assets/scss/cubed-css/_grid.scss
@@ -527,7 +527,7 @@
 
 @include until(sm) {
   .container {
-    max-width: $bp-xs;
+    max-width: $bp-sm;
   }
   .start-xs {
     justify-content: flex-start;
