--- a/src/assets/scss/cubed-css/_utilities.scss
+++ b/src/assets/scss/cubed-css/_utilities.scss
@@ -9,3 +9,10 @@
     padding: 0 !important;
     border: none !important;
 }
+
+.no-padding {
+    padding: 0 !important;
+}
+.no-margin {
+    margin: 0 !important;
+}
