--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,7 @@ li {
     color: $gray;
     padding: 0 1rem;
 }
+
+body {
+    overflow: hidden;
+}
